Update to objects

--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
             </div>
         </div>
         <br>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button id="submit" type="submit" class="btn btn-primary">Add Entry</button>
+        <button id="sortName" class="btn btn-primary">Sort by Student Name</button>
+        <button id="sortPerc" class="btn btn-primary">Sort by Percentage</button>
     </form>
+
 
     <p class="mx-auto" style="width: 50%" id="output">
         <strong id="first"><span id="outputFirst"></span></strong>
-        <strong id="last"> <span id="outputLast"></span></strong>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <strong id="grade">Grade:</strong> <span id="outputGrade"></span>
-        <strong id="percent">Percent:</strong> <span id="outputPercent"></span>
     </p>
 
 
